# geonext

./: .gitignore  Cargo.toml  README.md
assets/: axial-coordinates.json  map.txt  neighbours.json  starting_game_map
assets/blender/: army.blend  farm.blend  mine.blend  sawmill.blend
geonext-client/: Cargo.toml
geonext-client/assets/shaders/: border-fs.glsl  border-vs.glsl  frag.glsl  scene-fs.glsl  scene-vs.glsl  text-fs.glsl  text-vs.glsl  vert.glsl
geonext-client/src/: camera.rs  events.rs  lib.rs  map.rs  renderer.rs  terrain.rs  time.rs
geonext-client/src/renderer/: atlas.rs  border_render.rs  program.rs  terrain_render.rs  text.rs  text_render.rs  ui_layout.rs
geonext-shared/: Cargo.toml
geonext-shared/src/: client_message.rs  lib.rs  map_loader.rs  server_message.rs  territories.rs
server/: Cargo.toml
server/src/: auth.rs  compile_utils.rs  debugging.rs  html.rs  logger.rs  main.rs
utils/: README.md  borders_json.txt  extract_map.py  map_data.txt  model.py  requirements.txt
wasm-frontend/: Cargo.toml  index.html  standard_head.html  utils.js  welcome.html
wasm-frontend/public/: utils.js
wasm-frontend/src/: events.rs  html.rs  lib.rs  logger.rs  sockets.rs
