[package]
name = "geonext_client"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
glow = "0.12"
log = "0.4"
glam = { version = "0.24", features = ["glam-assert"] }
#hecs = "0.9"
random-fast-rng = { version = "0.1.1", default-features = false }
image = { version = "0.24.0", default-features = false, features = ["jpeg"] }
fontdue = "0.7"
geonext-shared = { path = "../geonext-shared" }
