[package]
name = "wasm-frontend"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3"
geonext_client = { path = "../geonext-client", version = "*" }
glow = "0.12"
log = "*"
geonext-shared = { path = "../geonext-shared" }
serde_json = { version = "1" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
  "WebGl2RenderingContext",
  "WebGlContextAttributes",
  "PointerEvent",
  "WheelEvent",
  "KeyboardEvent",
  "WebSocket",
  "ErrorEvent",
  "MessageEvent"
]

[lib]
crate-type = ["cdylib"]
